deploy/k8s/autoscaler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscaler
  namespace: sandlock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoscaler
  template:
    metadata:
      labels:
        app: autoscaler
    spec:
      serviceAccountName: autoscaler
      containers:
        - name: autoscaler
          image: registry.cn-shanghai.aliyuncs.com/byteplan/e2b-sandlock-autoscaler:0.1.0
